downgraded java version to 8